# bboard

./: README.md  bboard.sqlite3  pyproject.toml
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
main/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  utilities.py  views.py
main/migrations/: 0001_initial.py  0002_rubric_subrubric_superrubric_rubric_super_rubric.py  0003_bb_additionalimage.py  0004_comment.py
main/templates/email/: activation_letter_body.txt  new_comment_letter_body.txt
main/templates/layout/: basic.html
main/templates/main/: about.html  activation_done.html  activation_done_earlier.html  activation_failed.html  bb_detail.html  index.html  login.html  password_edit.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  profile_bb_add.html  profile_bb_delete.html  profile_bb_detail.html  profile_bb_edit.html  profile_delete.html  profile_edit.html  register.html  register_done.html  rubric_bbs.html
