[tool.poetry]
name = "bboard"
version = "0.1.0"
description = ""
authors = ["jshuckbot <gorka_ivan@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-bootstrap5 = "^23.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
